exercise-4-kubernetes/create-service.yml
apiVersion: v1
kind: Service
metadata:
  name: pacman-port-fowarding-v2
  namespace: pacman
spec:
  selector:
    app: pacman-v2.0
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
  type: ClusterIP
