exercise-4-kubernetes/create-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pacman-ingress
  namespace: pacman
spec:
  ingressClassName: nginx
  rules:
    - host: pacman.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pacman-port-fowarding-v2
                port:
                  number: 8080
